Parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
main' -> . main [ # ]
## Transitions:
-- On TYPE_POS shift to state 1
-- On TYPE_POINT shift to state 2
-- On TYPE_LIST shift to state 3
-- On TYPE_INT shift to state 5
-- On TYPE_FLOAT shift to state 6
-- On TYPE_COLOR shift to state 7
-- On TYPE_BOOL shift to state 8
-- On PRINT shift to state 11
-- On LT shift to state 115
-- On IF shift to state 131
-- On FOREACH shift to state 133
-- On FOR shift to state 137
-- On EOF shift to state 175
-- On DRAW shift to state 145
-- On COPY shift to state 150
-- On BEGIN shift to state 157
-- On type_expr shift to state 161
-- On statement shift to state 176
-- On main shift to state 178
## Reductions:

State 1:
## Known stack suffix:
## TYPE_POS
## LR(1) items:
type_expr -> TYPE_POS . [ R_PAR L_PAR ]
## Transitions:
## Reductions:
-- On R_PAR L_PAR
--   reduce production type_expr -> TYPE_POS

State 2:
## Known stack suffix:
## TYPE_POINT
## LR(1) items:
type_expr -> TYPE_POINT . [ R_PAR L_PAR ]
## Transitions:
## Reductions:
-- On R_PAR L_PAR
--   reduce production type_expr -> TYPE_POINT

State 3:
## Known stack suffix:
## TYPE_LIST
## LR(1) items:
type_expr -> TYPE_LIST . L_PAR type_expr R_PAR [ R_PAR L_PAR ]
## Transitions:
-- On L_PAR shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## TYPE_LIST L_PAR
## LR(1) items:
type_expr -> TYPE_LIST L_PAR . type_expr R_PAR [ R_PAR L_PAR ]
## Transitions:
-- On TYPE_POS shift to state 1
-- On TYPE_POINT shift to state 2
-- On TYPE_LIST shift to state 3
-- On TYPE_INT shift to state 5
-- On TYPE_FLOAT shift to state 6
-- On TYPE_COLOR shift to state 7
-- On TYPE_BOOL shift to state 8
-- On type_expr shift to state 9
## Reductions:

State 5:
## Known stack suffix:
## TYPE_INT
## LR(1) items:
type_expr -> TYPE_INT . [ R_PAR L_PAR ]
## Transitions:
## Reductions:
-- On R_PAR L_PAR
--   reduce production type_expr -> TYPE_INT

State 6:
## Known stack suffix:
## TYPE_FLOAT
## LR(1) items:
type_expr -> TYPE_FLOAT . [ R_PAR L_PAR ]
## Transitions:
## Reductions:
-- On R_PAR L_PAR
--   reduce production type_expr -> TYPE_FLOAT

State 7:
## Known stack suffix:
## TYPE_COLOR
## LR(1) items:
type_expr -> TYPE_COLOR . [ R_PAR L_PAR ]
## Transitions:
## Reductions:
-- On R_PAR L_PAR
--   reduce production type_expr -> TYPE_COLOR

State 8:
## Known stack suffix:
## TYPE_BOOL
## LR(1) items:
type_expr -> TYPE_BOOL . [ R_PAR L_PAR ]
## Transitions:
## Reductions:
-- On R_PAR L_PAR
--   reduce production type_expr -> TYPE_BOOL

State 9:
## Known stack suffix:
## TYPE_LIST L_PAR type_expr
## LR(1) items:
type_expr -> TYPE_LIST L_PAR type_expr . R_PAR [ R_PAR L_PAR ]
## Transitions:
-- On R_PAR shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## TYPE_LIST L_PAR type_expr R_PAR
## LR(1) items:
type_expr -> TYPE_LIST L_PAR type_expr R_PAR . [ R_PAR L_PAR ]
## Transitions:
## Reductions:
-- On R_PAR L_PAR
--   reduce production type_expr -> TYPE_LIST L_PAR type_expr R_PAR

State 11:
## Known stack suffix:
## PRINT
## LR(1) items:
statement -> PRINT . L_PAR expression R_PAR SEMICOLON [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL PRINT IF FOREACH FOR EOF END ELSE DRAW COPY BEGIN ]
statement -> PRINT . L_PAR expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL PRINT IF FOREACH FOR EOF END ELSE DRAW COPY BEGIN ]
## Transitions:
-- On L_PAR shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## PRINT L_PAR
## LR(1) items:
statement -> PRINT L_PAR . expression R_PAR SEMICOLON [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL PRINT IF FOREACH FOR EOF END ELSE DRAW COPY BEGIN ]
statement -> PRINT L_PAR . expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL PRINT IF FOREACH FOR EOF END ELSE DRAW COPY BEGIN ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 112
## Reductions:

State 13:
## Known stack suffix:
## TYPE_POS
## LR(1) items:
expression -> TYPE_POS . L_PAR expression COMMA expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## TYPE_POS L_PAR
## LR(1) items:
expression -> TYPE_POS L_PAR . expression COMMA expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 108
## Reductions:

State 15:
## Known stack suffix:
## TYPE_POINT
## LR(1) items:
expression -> TYPE_POINT . L_PAR expression COMMA expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## TYPE_POINT L_PAR
## LR(1) items:
expression -> TYPE_POINT L_PAR . expression COMMA expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 104
## Reductions:

State 17:
## Known stack suffix:
## TYPE_COLOR
## LR(1) items:
expression -> TYPE_COLOR . L_PAR expression COMMA expression COMMA expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## TYPE_COLOR L_PAR
## LR(1) items:
expression -> TYPE_COLOR L_PAR . expression COMMA expression COMMA expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 98
## Reductions:

State 19:
## Known stack suffix:
## TAIL
## LR(1) items:
expression -> TAIL . L_PAR expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## TAIL L_PAR
## LR(1) items:
expression -> TAIL L_PAR . expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 96
## Reductions:

State 21:
## Known stack suffix:
## SUB
## LR(1) items:
expression -> SUB . L_PAR expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## SUB L_PAR
## LR(1) items:
expression -> SUB L_PAR . expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 94
## Reductions:

State 23:
## Known stack suffix:
## SIN
## LR(1) items:
expression -> SIN . L_PAR expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## SIN L_PAR
## LR(1) items:
expression -> SIN L_PAR . expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 92
## Reductions:

State 25:
## Known stack suffix:
## NOT
## LR(1) items:
expression -> NOT . expression [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 91
## Reductions:

State 26:
## Known stack suffix:
## L_SQ_BRK
## LR(1) items:
expression -> L_SQ_BRK . expression_list R_SQ_BRK [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression_list shift to state 86
-- On expression shift to state 88
## Reductions:
-- On R_SQ_BRK
--   reduce production expression_list ->

State 27:
## Known stack suffix:
## L_PAR
## LR(1) items:
expression -> L_PAR . expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 84
## Reductions:

State 28:
## Known stack suffix:
## INT
## LR(1) items:
expression -> INT . [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
## Reductions:
-- On TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD
--   reduce production expression -> INT

State 29:
## Known stack suffix:
## ID
## LR(1) items:
expression -> ID . [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
## Reductions:
-- On TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD
--   reduce production expression -> ID

State 30:
## Known stack suffix:
## HEAD
## LR(1) items:
expression -> HEAD . L_PAR expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## HEAD L_PAR
## LR(1) items:
expression -> HEAD L_PAR . expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 82
## Reductions:

State 32:
## Known stack suffix:
## FLOOR
## LR(1) items:
expression -> FLOOR . L_PAR expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## FLOOR L_PAR
## LR(1) items:
expression -> FLOOR L_PAR . expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On TYPE_POS shift to state 13
-- On TYPE_POINT shift to state 15
-- On TYPE_COLOR shift to state 17
-- On TAIL shift to state 19
-- On SUB shift to state 21
-- On SIN shift to state 23
-- On NOT shift to state 25
-- On L_SQ_BRK shift to state 26
-- On L_PAR shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On HEAD shift to state 30
-- On FLOOR shift to state 32
-- On FLOAT_OF_INT shift to state 34
-- On FLOAT shift to state 36
-- On COS shift to state 37
-- On BOOL shift to state 39
-- On expression shift to state 80
## Reductions:

State 34:
## Known stack suffix:
## FLOAT_OF_INT
## LR(1) items:
expression -> FLOAT_OF_INT . L_PAR expression R_PAR [ TYPE_POS TYPE_POINT TYPE_LIST TYPE_INT TYPE_FLOAT TYPE_COLOR TYPE_BOOL TO SUB STEP R_SQ_BRK R_PAR PRINT OR NE MUL MOD LT LE IF GT GE FOREACH FOR EQ DRAW DOT DIV COPY CONS COMMA BEGIN AND ADD ]
## Transitions:
-- On L_PAR shift to state 35
## Reductions:
